--- a/rescat/rescat/Main/Storyboard/FundingDetailBottomTableCell.xib
+++ b/rescat/rescat/Main/Storyboard/FundingDetailBottomTableCell.xib
@@ -19,11 +19,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="375" height="166.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="buttomIllust2" translatesAutoresizingMaskIntoConstraints="NO" id="GIc-XW-jlV">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="buttomIllust2" translatesAutoresizingMaskIntoConstraints="NO" id="GIc-XW-jlV">
                         <rect key="frame" x="0.0" y="27" width="375" height="90"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="90" id="akY-2v-BVE"/>
-                        </constraints>
                     </imageView>
                 </subviews>
                 <constraints>
