--- a/rescat/rescat/Map/Storyboard/DetailView3.xib
+++ b/rescat/rescat/Map/Storyboard/DetailView3.xib
@@ -24,7 +24,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="140"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fbL-uy-Wse">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="markerdefault" translatesAutoresizingMaskIntoConstraints="NO" id="fbL-uy-Wse">
                     <rect key="frame" x="14" y="14" width="85" height="82"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="85" id="K19-LT-OAb"/>
@@ -104,5 +104,6 @@
     </objects>
     <resources>
         <image name="icEtc" width="21" height="21"/>
+        <image name="markerdefault" width="85" height="82"/>
     </resources>
 </document>
