--- a/rescat/rescat/Main/Storyboard/Base.lproj/Main.storyboard
+++ b/rescat/rescat/Main/Storyboard/Base.lproj/Main.storyboard
@@ -253,9 +253,8 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="dvo-q9-Pj7" colorLabel="IBBuiltInLabel-Red">
                                                 <rect key="frame" x="0.0" y="1189" width="375" height="125"/>
                                                 <subviews>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JPB-Y0-svL">
+                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="banner_bottom" translatesAutoresizingMaskIntoConstraints="NO" id="JPB-Y0-svL">
                                                         <rect key="frame" x="0.0" y="0.0" width="375" height="125"/>
-                                                        <color key="backgroundColor" red="0.2901960784" green="0.2901960784" blue="0.2901960784" alpha="1" colorSpace="calibratedRGB"/>
                                                     </imageView>
                                                 </subviews>
                                                 <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -1967,6 +1966,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="banner_bottom" width="375" height="125"/>
         <image name="buttonRadioOff" width="22" height="22"/>
         <image name="buttonRadioOn" width="22" height="22"/>
         <image name="buttonRescatMore2" width="74" height="35"/>
