--- a/rescat/rescat/Main/Storyboard/FundingDetailBottomTableCell.xib
+++ b/rescat/rescat/Main/Storyboard/FundingDetailBottomTableCell.xib
@@ -23,6 +23,7 @@
                         <rect key="frame" x="0.0" y="27" width="375" height="90"/>
                     </imageView>
                 </subviews>
+                <color key="backgroundColor" red="1" green="0.99998801946640015" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 <constraints>
                     <constraint firstItem="GIc-XW-jlV" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Sas-Nx-h80"/>
                     <constraint firstAttribute="trailing" secondItem="GIc-XW-jlV" secondAttribute="trailing" id="cJG-Tn-dgk"/>
